--- a/styles/Contact.css
+++ b/styles/Contact.css
@@ -31,7 +31,7 @@
 .links a, .contact-details a {
     color: #FF7E5F;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 1rem;
 }
 
 .links svg , .contact-details svg {
